# sd-mech

./: .dir-locals.el  .gitignore  README.md  sd-mech-model.cabal  sd-mech.cabal  sdms.hs  stack.yaml
exc/: Main.hs
lib/Snowdrift/: Mech.hs  Mechanism.hs
lib/Snowdrift/Mech/: Types.hs  Util.hs
lib/Snowdrift/Mech/Types/: Funds.hs  Nat.hs  Patron.hs  Project.hs
lib/Snowdrift/Mechanism/: #Pledge.hs#  Pledge.hs  Pool.hs  Project.hs  Types.hs
lib/Snowdrift/Mechanism/Pledge/: Checks.hs  Lenses.hs
lib/Snowdrift/Mechanism/Types/: Lenses.hs
old/firsttry/Mechanism/: Types.hs
old/secondtry/Types/: Patron.hs  Project.hs
oldlib/Mechanism/: Patron.hs  Pledge.hs
oldlib/Mechanism/Types/: Lenses.hs
sd-mech/: .dir-locals.el  README.md  stack.yaml
sd-mech/old/: Nat.hs  PgHelper.hs
sd-mech/old/firsttry/Mechanism/: Project.hs
sd-mech/spec/: MarkovSpec.hs  MarkovTypes.hs
sd-mech/src/SdMech/: Funds.hs  Types.hs
spec/: .dir-locals.el  FundsSpec.hs  Instances.hs  MarkovSpec.hs  MarkovTypes.hs  NatSpec.hs  PatronSpec.hs  PoolSpec.hs  ProjectSpec.hs  Spec.hs
src/: SdMech.hs
src/SdMech/: Combinators.hs  Funds.hs  Mutations.hs  PersistEntities.hs  Types.hs  Util.hs
src/SdMech/Types/: MechPledgeStatus.hs  PledgeStatus.hs
tests/impure/: Main.hs
tests/impure/Test/Tasty/Persist/: Postgres.hs
tests/pure/: FundsSpec.hs  Instances.hs
