name:                sd-mech-model
version:             0.1.0.0
synopsis:            Model for the mechanism of Snowdrift
-- description:         
homepage:            https://snowdrift.coop
license:             AGPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2016 Peter Harpending
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  LICENSE
  README.md

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      lib
  exposed-modules:
    Snowdrift.Mechanism
  build-depends:
      base ==4.8.*
    , containers
    , exceptional
    , mtl
    , vector

executable sd-mech-model
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  hs-source-dirs:      exc
  main-is:             Main.hs
  build-depends:
      base ==4.8.*
    , sd-mech-model

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-orphans
  hs-source-dirs:      spec
  main-is:             Spec.hs
  default-extensions:
    FlexibleInstances
  other-modules:
    Instances
    PoolSpec
  build-depends:
      base ==4.8.*
    , containers
    , hspec
    , QuickCheck
    , sd-mech-model
    , vector
