name:                sd-mech-model
version:             0.1.0.0
synopsis:            Model for the mechanism of Snowdrift
description:         
  <https://snowdrift.coop Snowdrift.coop> has a rather complicated system for
  managing donations to projects. This package models and tests that system. See
  the README included with the package for more details.
homepage:            https://snowdrift.coop
license:             AGPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
bug-reports:         https://github.com/pharpend/sd-mech-model/issues/new
copyright:           Copyright (c) 2016 Peter Harpending
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  LICENSE
  README.md

source-repository head
  type:         git
  location:     https://github.com/pharpend/sd-mech-model.git

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      lib
  default-extensions:
    LambdaCase
    MultiWayIf
    TemplateHaskell
  exposed-modules:
    Snowdrift.Mechanism
    Snowdrift.Mechanism.Patron
    Snowdrift.Mechanism.Pledge
    Snowdrift.Mechanism.Pool
    Snowdrift.Mechanism.Project
    Snowdrift.Mechanism.Types
    Snowdrift.Mechanism.Types.Lenses
  build-depends:
      base ==4.8.*
    , containers
    , lens
    , mtl

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-orphans
  hs-source-dirs:      spec
  main-is:             Spec.hs
  default-extensions:
    FlexibleInstances
    LambdaCase
  other-modules:
    Instances
    PoolSpec
  build-depends:
      base ==4.8.*
    , containers
    , hspec
    , QuickCheck
    , sd-mech-model
