name:                sd-mech-model
version:             0.1.0.0
synopsis:            Model for the mechanism of Snowdrift
description:         
  <https://snowdrift.coop Snowdrift.coop> has a rather complicated system for
  managing donations to projects. This package models and tests that system. See
  the README included with the package for more details.
  .
homepage:            https://snowdrift.coop/p/snowdrift/w/en/mechanism
license:             AGPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
bug-reports:         https://github.com/pharpend/sd-mech-model/issues/new
copyright:           Copyright (c) 2016 Peter Harpending
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  LICENSE
  README.md

source-repository head
  type:         git
  location:     https://github.com/pharpend/sd-mech-model.git

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      lib
  default-extensions:
    DeriveGeneric
    FunctionalDependencies
    FlexibleInstances
    LambdaCase
    MultiWayIf
    MultiParamTypeClasses
    TemplateHaskell
    Trustworthy
  exposed-modules:
    Snowdrift.Mech
    Snowdrift.Mech.Util
    Snowdrift.Mech.Types
    Snowdrift.Mech.Types.Funds
    Snowdrift.Mech.Types.Nat
    Snowdrift.Mech.Types.Patron
    Snowdrift.Mech.Types.Project
  build-depends:
      base ==4.8.*
    , aeson >=0.10.0.0
    , containers
    , lens
    , mtl
    , persistent
    , persistent-template
    , text
    , vector

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-orphans
  hs-source-dirs:      spec
  main-is:             Spec.hs
  default-extensions:
    FlexibleInstances
    LambdaCase
    Trustworthy
  other-modules:
    Instances
    FundsSpec
    NatSpec
  build-depends:
      base ==4.8.*
    , containers
    , hspec
    , QuickCheck
    , sd-mech-model
