name:                sd-mech
version:             0.1.0.0
synopsis:            Model for the mechanism of Snowdrift
description:         
  <https://snowdrift.coop Snowdrift.coop> has a rather complicated system for
  managing donations to projects. This package models and tests that system. See
  the README included with the package for more details.
homepage:            https://snowdrift.coop/p/snowdrift/w/en/mechanism
license:             AGPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
bug-reports:         https://github.com/pharpend/sd-mech-model/issues/new
copyright:           Copyright (c) 2016 Peter Harpending
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  LICENSE
  README.md

source-repository head
  type:         git
  location:     https://github.com/pharpend/sd-mech-model.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-methods
  default-extensions:
    DeriveGeneric
    GADTs
    GeneralizedNewtypeDeriving
    FunctionalDependencies
    FlexibleInstances
    LambdaCase
    MultiWayIf
    MultiParamTypeClasses
    QuasiQuotes
    TemplateHaskell
    Trustworthy
    TypeFamilies
  exposed-modules:
    SdMech
    SdMech.Funds
    SdMech.Nat
    SdMech.PersistEntities
    SdMech.Util
  build-depends:
      base ==4.8.*
    , aeson >=0.10.0.0
    , lens
    , persistent
    , persistent-template

-- Tests for pure code
test-suite pure
  hs-source-dirs:      tests/pure
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-orphans
  default-extensions:
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    Trustworthy
  other-modules:
    Instances
    FundsSpec
    NatSpec
  build-depends:
      base ==4.8.*
    , hspec
    , QuickCheck
    , sd-mech

test-suite impure
  hs-source-dirs:      tests/impure
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-orphans
  default-extensions:
    OverloadedStrings
    LambdaCase
    Trustworthy
  other-modules:
    Test.Tasty.Persist.Postgres
  build-depends:
      base ==4.8.*
    , bytestring
    , directory
    , monad-logger
    , persistent
    , persistent-postgresql
    , postgresql-simple
    , random
    , resource-pool
    , sd-mech
    , tasty
    , tasty-hunit
    , transformers
